@@ -52,14 +52,16 @@ function testMethodCall(opts) {
     if (testCase.action === undefined) {
       assert.fail('No action (read/write) given in the test case');
     } else if (testCase.action === 'read') {
-      assert.ok(
-        /-dsn\.algolia\.net$/.test(actualRequestURL.host),
-        'We used a DSN host'
+      assert.equal(
+        actualRequestURL.host,
+        opts.applicationID.toLowerCase() + '-dsn.algolia.net',
+        'We used the first read host (DSN)'
       );
     } else if (testCase.action === 'write') {
-      assert.ok(
-        /-[1-3]\.algolia\.net$/.test(actualRequestURL.host),
-        'We used a non DSN host'
+      assert.equal(
+        actualRequestURL.host,
+        opts.applicationID.toLowerCase() + '.algolia.net',
+        'We used the first write host (fault tolerant)'
       );
     } else {
       assert.fail('Unkown action (read/write) found in the test case (was: ' + testCase.action + ')');
