@@ -23,6 +23,9 @@ UNREALEASED
     * BREAKING CHANGE (Node.js): removed client.multipleQueries(), use client.search(queries)
     * DEPRECIATION (browser): client.startQueriesBatch/addQueryInBatch/sendQueriesBatch
       Use client.search(queries)
+    * FEATURE: new HA implementation
+      We now use two different DNS to perform all requests
+      Removed the tld option as it's no more needed nor compatible with having a new HA implementation with different tlds (.com/.net)
 
 2015-10-04  3.0.7
     * MIGRATION: throw on V2 .search() usage:
